[workspace]
resolver = "2"
members = ["sdk", "examples/*"]


[workspace.dependencies]
dioxus-sdk = { path = "./sdk" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "005d52468d00bdd2df3ab6ca6f1ae81b96e5c47d" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus", rev = "005d52468d00bdd2df3ab6ca6f1ae81b96e5c47d" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus", rev = "005d52468d00bdd2df3ab6ca6f1ae81b96e5c47d" }
